Add swag specifications and specs to cover invitations
